--- a/index.html
+++ b/index.html
@@ -12,13 +12,41 @@
     <section class="top-bannar">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h2><span class="name-highlight">Biplob</span> Website</h2>
+            <h2><span class="orange-highlight">Biplob</span> Website</h2>
             <h3>World-class professional web developer</h3>
             <p>I like creativity so i chose web development as a career.I received internationally recogniged training from PROGRAMMING HERO on web site design and development</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/profile1.png.png" alt="">
+            <img src="images/jhankar.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream big</h2>
+            <h3>Become a web developer</h3>
+            <pI> like creativity so i chose web development as a career.I received internationally recogniged training from PROGRAMMING HERO on web site design and development</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+             <h2>Full stack Web Dev</h2>
+             <h3 class="orange-highlight">2021 - present | Pro Level Web Dev</h3>
+             <P>I like creativity so i chose web development as a career.I received internationally recogniged training from PROGRAMMING HERO on web site design and development</P>
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+             <h2>Baby Web Devloper</h2>
+             <h3 class="orange-highlight">2020 - 2021 | Programming Hero Learner</h3>
+             <P>I like creativity so i chose web development as a career.I received internationally recogniged training from PROGRAMMING HERO on web site design and development</P>
+        </div>
+    </section>
+   <footer>
+       <p>© Biplob 2021, All rights reserved.</p>
+   </footer>
 </body>
 </html>
